fixed MongoResponse Object
