# app/internal/models/mongo.go
@@ -1,0 +1,44 @@
+package models
+
+import (
+	"strings"
+
+	"go.mongodb.org/mongo-driver/bson"
+)
+
+type MongoResponse struct {
+	MongoId    string `json:"mongo_id" bson:"_id"`
+	Name       string `json:"name" bson:"_name"`
+	ApiId      int    `json:"api_id" bson:"id"`
+	ApiVersion string `json:"api_version" bson:"_version"`
+	OASVersion string `json:"oas_version"`
+	Commits    int    `json:"commits_n" bson:"commits"`
+	Latest     bool   `json:"is_latest" bson:"latest"`
+
+	Specification bson.Raw `json:"-" bson:"api"`
+	NameAlt string `json:"-" bson:"api_title"`
+	ApiVersionAlt string `json:"-" bson:"api_version"`
+}
+
+type MongoResponseWithApi struct {
+	MongoResponse MongoResponse `json:"metadata"`
+	Specification string        `json:"specification"`
+}
+
+func (b *MongoResponse) InitObject() {
+	oasOpenapi := b.Specification.Lookup("openapi").String()
+	oasSwagger := b.Specification.Lookup("swagger").String()
+	oasOpenapi = strings.Trim(oasOpenapi, `\\"`)
+	oasSwagger = strings.Trim(oasSwagger, `\\"`)
+
+	if strings.Compare(oasOpenapi, "") != 0 {
+		b.OASVersion = oasOpenapi
+	} else {
+		b.OASVersion = oasSwagger
+	}
+
+	if strings.Compare(b.NameAlt, "") != 0 {
+		b.Name = b.NameAlt
+		b.ApiVersion = b.ApiVersionAlt
+	}
+}
