# app/internal/models/specifications.go
@@ -1,7 +1,7 @@
 package models
 
 type SpecificationsRequest struct {
-	Specifications []Specification
+	Specifications []Specification `json:"specifications"`
 }
 
 type Specification map[string]interface{}
